--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mongodb-atlas-backup",
-  "version": "0.9.2",
+  "name": "mongodb-atlas-backup-restore",
+  "version": "1.0.1",
   "description": "The human way to mongodump and mongorestore your MongoDB Atlas cluster",
   "main": "dist/index.js",
   "scripts": {
